--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -386,13 +386,17 @@ function drawObstacle(obs) {
   const { x, y } = obs;
 
 	// Coils (omit the largest bottom one)
-	const coilHeights = [0, 10, 20]; // Removed last one (was 30)
-	const coilWidths = [40, 60, 80]; // Removed width 100
-	const bodyColors = ["#a97453", "#c49b66", "#a97453"];
+	const scale = 0.75; // 25% smaller
+	const coilHeights = [0, 10, 20].map(h => h * scale);
+	const coilWidths = [40, 60, 80].map(w => w * scale);
 
+	const bodyColors = ["#a97453", "#c49b66", "#a97453"];
+    
+	
 	for (let i = 0; i < coilWidths.length; i++) {
 	  ctx.beginPath();
-	  ctx.ellipse(x, y + coilHeights[i], coilWidths[i] / 2, 14, 0, 0, Math.PI * 2);
+	  ctx.ellipse(x, y + coilHeights[i], coilWidths[i] / 2, 14 * scale, 0, 0, Math.PI * 2);
+
 	  ctx.fillStyle = bodyColors[i];
 	  ctx.strokeStyle = "black";
 	  ctx.lineWidth = 1;
@@ -401,10 +405,10 @@ function drawObstacle(obs) {
 	}
 
 // Rattle segments (attached to third coil)
-const baseY = y + 20;
+const baseY = y + 20 * scale;
 for (let i = 0; i < 4; i++) {
   ctx.beginPath();
-  ctx.ellipse(x + 45 + i * 6, baseY, 5, 8, 0, 0, Math.PI * 2);
+  ctx.ellipse(x + (45 + i * 6) * scale, baseY, 5 * scale, 8 * scale, 0, 0, Math.PI * 2);
   ctx.fillStyle = "#e1c48a";
   ctx.strokeStyle = "black";
   ctx.fill();
@@ -412,11 +416,9 @@ for (let i = 0; i < 4; i++) {
 }
 
   // ⬇ Smaller Head (scaled down and moved slightly lower)
-  const headY = y-25;
-  const headWidth = 14;
-  const headHeight = 20;
+  const headY = y - 25 * scale;
   ctx.beginPath();
-  ctx.ellipse(x, headY, headWidth, headHeight, 0, 0, Math.PI * 2);
+  ctx.ellipse(x, headY, 14 * scale, 20 * scale, 0, 0, Math.PI * 2);
   ctx.fillStyle = "#5d4037";
   ctx.strokeStyle = "black";
   ctx.fill();
@@ -424,8 +426,9 @@ for (let i = 0; i < 4; i++) {
 
   // ⬇ Eyes (smaller and repositioned)
   ctx.beginPath();
-  ctx.ellipse(x - 5, headY - 2, 4, 8, 0, 0, Math.PI * 2);
-  ctx.ellipse(x + 5, headY - 2, 4, 8, 0, 0, Math.PI * 2);
+ctx.ellipse(x - 5 * scale, headY - 2 * scale, 4 * scale, 8 * scale, 0, 0, Math.PI * 2);
+ctx.ellipse(x + 5 * scale, headY - 2 * scale, 4 * scale, 8 * scale, 0, 0, Math.PI * 2);
+
   ctx.fillStyle = "white";
   ctx.fill();
   ctx.strokeStyle = "black";
@@ -433,17 +436,17 @@ for (let i = 0; i < 4; i++) {
 
   // ⬇ Pupils
   ctx.beginPath();
-  ctx.ellipse(x - 5, headY - 2, 1.5, 3, 0, 0, Math.PI * 2);
-  ctx.ellipse(x + 5, headY - 2, 1.5, 3, 0, 0, Math.PI * 2);
+ctx.ellipse(x - 5 * scale, headY - 2 * scale, 1.5 * scale, 3 * scale, 0, 0, Math.PI * 2);
+ctx.ellipse(x + 5 * scale, headY - 2 * scale, 1.5 * scale, 3 * scale, 0, 0, Math.PI * 2);
   ctx.fillStyle = "black";
   ctx.fill();
 
 // Tongue (longer, wider fork, more visible)
 ctx.beginPath();
-ctx.moveTo(x, headY + 8);              // base of tongue
-ctx.lineTo(x - 4, headY + 22);         // left fork
-ctx.lineTo(x, headY + 16);             // center return
-ctx.lineTo(x + 4, headY + 22);         // right fork
+ctx.moveTo(x, headY + 8 * scale);
+ctx.lineTo(x - 4 * scale, headY + 22 * scale);
+ctx.lineTo(x, headY + 16 * scale);
+ctx.lineTo(x + 4 * scale, headY + 22 * scale);
 ctx.closePath();
 ctx.fillStyle = "#ff3333";             // brighter red
 ctx.fill();
